# 3DViewer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/model/: CMakeLists.txt  converter.cc  converter.h  model.cc  model.h  obj_data.h  obj_parser.cc  obj_parser.h  vertex.cc  vertex.h
src/observer/: context.cc  context.h  observable.cc  observable.h  observer.h
src/tests/: CMakeLists.txt  converter_tests.cc  parser_tests.cc
src/tests/samples/: only_vertexes_file  only_vertexes_indexes_file  with_negative_indexes_file  with_negative_sections_indexes_file
src/view/: gif.h  mainwindow.cc  mainwindow.h  mainwindow.ui  viewer.cc  viewer.h
